--- a/index.html
+++ b/index.html
@@ -311,7 +311,262 @@
 		
 	</section> <!-- /features -->
 
+</section> <!-- /portfolio -->
+	<section id="resume" class="grey-section">
 
+		<div class="row section-intro">
+			<div class="col-twelve">
+				<h1>Accomplishment Report</h1>
+
+				<p class="lead">I've honed my coding skills to contribute actively to software development projects. Excited to share the key accomplishments and lessons from this valuable experience.</p>
+
+			</div>
+		</div> <!-- /section-intro-->
+
+		<div class="row resume-timeline">
+			<div class="col-twelve">
+
+				<div class="timeline-wrap">
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>ASP.NET Core 6 and Razor Pages</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>I delved deep into ASP.NET Core 6, Razor Pages, and their intricacies. From error handling to data access, I gained hands-on experience in building robust web applications. Working with forms, binding, and validation enhanced my understanding of user input interactions.</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Docker Mastery</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>Docker became a close companion throughout the internship. From extensive documentation exploration to creating my own guides, I tackled the nuances of installation on Windows, Mac, and Linux. Redmine ticket filing became second nature as I navigated through the challenges of Docker, contributing to a collective knowledge base.</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Continuous Integration/Continuous Deployment (CI/CD)</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>The world of CI/CD unfolded as I explored deploying ASP.NET Core applications on Docker. Azure DevOps became my playground for understanding the automation processes involved in deploying applications seamlessly.</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Git and Version Control</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								Version control wasn't just a term; it was a daily practice. I got my hands dirty with Git, managing source code, branching, and merging. Collaborative coding became a breeze with the team, and I found the importance of keeping a clean version history.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Project Deployments</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								The thrill of seeing my ASP.NET Core web applications running smoothly on Docker was unmatched. I took the plunge into publishing Docker images on Docker Hub, mastering the art of pulling, pushing, and running images locally for efficient development.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Database Management</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								MariaDB, tables, and migrations became my companions in the realm of database management. Setting up MariaDB locally and contributing to migration tasks deepened my understanding of how databases play a crucial role in application development.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Software Upgrades and Maintenance</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								Code maintenance wasnâ€™t just about fixing bugs; it was a journey of continuous improvement. I upgraded and maintained code, ensuring that the application stayed on the latest and most stable versions of the .NET Framework and external packages.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Meetings and Collaboration</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								From fire drills to regular catch-ups with Sir Hernie, every meeting was a learning opportunity. Collaboration with the team, be it through code reviews or updates, allowed me to contribute to the collective progress of our projects.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Documentation and Training</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								My journey with Docker wasn't complete without comprehensive documentation. I not only documented my Docker experiences but also shared the knowledge through video tutorials and training sessions, fostering a culture of learning within the team.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Problem Solving and Debugging</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								Challenges were aplenty, from installation hiccups to runtime errors. I embraced each issue as a chance to learn and problem-solve. Debugging wasn't just about fixing; it was about understanding the intricacies of the application.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Bug Fixing and Code Review</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								Bugs were opportunities to refine the code. Engaging in code reviews not only refined my coding practices but also exposed me to diverse perspectives, enhancing the overall quality of our work.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Personal and Professional Development</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								The transition to .NET 5 and 6 was both exciting and challenging. Adapting to new technologies showcased my flexibility and willingness to stay at the forefront of the ever-evolving tech landscape.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-cog"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Soft Skills Enhancement</h3>
+						</div>
+
+						<div class="timeline-content">
+							<p>
+								Communication skills flourished through regular interactions. From discussions with team members to code reviews, I honed my ability to convey ideas effectively and received constructive feedback graciously.
+							</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
+
+				</div> <!-- /timeline-wrap -->
+				<div class="row section-intro">
+					<div class="col-twelve">
+						<p class="lead">These experiences have not only equipped me with technical prowess but have also sculpted my approach to problem-solving, collaboration, and continuous learning. As I move forward, these lessons will undoubtedly serve as the bedrock of my journey in the dynamic realm of software development.</p>
+					</div>
+				</div> <!-- /section-intro-->
+			</div> <!-- /col-twelve -->
+
+		</div> <!-- /resume-timeline -->
+
+	</section> <!-- /features -->
+	
 	<!-- CTA Section
    ================================================== -->
 	<section id="cta" class="grey-section">
